# hathi

./: .gitignore  README.md  credentials.txt  filter_pass.py  hathi.py  passwords.txt  pyproject.toml  requirements.txt  usernames.txt
hathi/: __init__.py  __main__.py  filter_pass.py  mssql.py  mysql.py  postgres.py  scanner.py
